--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -102,7 +102,7 @@
 </p>
           <ul>
             <li><strong>Build a sensor</strong> - a ‘howto’ description for using the picaxe sensor unit and setting up the Casio FX-9750 calculator.</li>
-            <li><strong>Test your sensor</strong> - an activity already tested by the teacher to demonstrate the equipment has been assembled correctly and is performing as expected. With senior classes in maths or science, it was expected some sensors would need calibrating, a useful additional skill.</li>
+            <li><strong>Test your sensor</strong> - an activity already tested by the teacher to demonstrate the equipment has been assembled correctly and is performing as expected. With senior classes in maths or science, it was expected some sensors would need calibrating, a useful additional skill. A Calulus class was given a CSI scenario requiring a cooling curve to determine time death.</li>
 	    <li><strong>Use your sensor</strong> - students invented their own authentic activity to replace a contrived NCEA task of little relevance or interest to them. Gamification and simulation made for much more engaging summative assessment.</li>
           </ul>
 
@@ -113,12 +113,18 @@
 <blockquote><span lang="en">"<strong>'Test it'</strong> Receiving sensor data from a Picaxe sensor unit into the Casio FX-9750 as a list.</span></blockquote>
 <img src="../assets/img/casio-picaxe-graphed-data.jpg" alt="'Test It' activity - plotting data from a Picaxe sensor unit." width="300" height="300" />
 <blockquote><span lang="en">"<strong>'Test it'</strong> plotting data from a Picaxe sensor unit.</span></blockquote>
-<img src="../assets/img/casio-picaxe-temperature-calibration.png" alt="'Test It' activity - calibrating a temperature sensor in cooling water." width="300" height="300" />
+<img src="../assets/img/casio-picaxe-temperature-calibration.png" alt="'Test It' activity - calibrating a temperature sensor in cooling water." />
 <p> </p>
 <blockquote><span lang="en">"<strong>'Test it'</strong> calibrating a temperature sensor in cooling water.</span></blockquote>
 <p></p>
+
+<div class="warning-box">
+ <p><strong>Warning: DO NOT let students test boiling water or live electrical outlets!</strong> </p>
+</div>
+<p>There is no need to calibrate temperature sensors using boiling water. Where in the real world would a student expect to record that temperature? For some reason teachers default to using ice and boiling water to calibrate sensors. If you are investigating cooling curves, YOU should safely get sensor readings at 100 &degC and PROVIDE THIS to learners.</p>
+<br>
 	<h3 id="use-it">Use it</h3>
-<img src="../assets/img/casio-picaxe-mission-to-mars.jpg" alt="'Uee It' activity - Engineers problem-solving a prototype Mars Orbiter to scan the surface of Mars." width="300" height="300" />
+<img src="../assets/img/casio-picaxe-mission-to-mars.jpg" alt="'Uee It' activity - Engineers problem-solving a prototype Mars Orbiter to scan the surface of Mars.">
 	<h4 id="authentic-learning-at-school-and-home">Authentic cross-curricula learning at school and home</h4>
 	<p>The Calculus students trialing this tool were preparing for an external summative assessment on the topic of “Integrate functions and
 use integrals to solve problems”. This includes using Simpson’s rule. Demonstrating the required skills through a student-led case-based inquiry raised their curiosity, their interest, and their own expectations for what a successful outcome should look like. It was more than just maths. Collecting real data was exciting; they were engineers prototyping a space vehicle and its sensors for a mission to Mars. The real-world data collected had off-world conseqences for them. Important soft skills such as perserverance and creativity were shown, enabling all students to reach the extended abstract level on the SOLO taxonomy (Hattie and Brown, 2004). Many concepts in senior Physics were part of discussions. Students also used the f-word. They reported they had fun!</p>
@@ -127,14 +133,20 @@ use integrals to solve problems”. This includes using Simpson’s rule. Demons
 	<h4 id="making-diy-home-made-sensors">Making low cost DIY home-made sensors</h4>
 	<p>Since the early 2000's Michael has developed a number of sensors; some are shown on his YouTube channel. Some sensors are very simple single component sensors costing a few cents. Other sensors are inexpensive but include a power source and a few more components. Apart from the straightforward voltage, current and resistance measurements, the multi-meters can also detect; visible light, infra-red light, ultra-violet light, ionising radiation such as alpha particles, temperature, angle, bend, salt, humidity, pressure, touch, paper thickness, mobile phone transmissions, static electric fields, and more.</p>
 <p>All of these sensors can be connected to a Casio graphic calculator using a low-cost ($6) Picaxe microcontroller.</p>
+<div class="warning-box">
+  <p><strong>Warning: DO NOT let students test boiling water or live electrical outlets!</strong> </p>
+</div>
+<p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. Casi was a Picaxe controlled tracked robot that was driven remotely using a Casio FX-9750 graphic calculator connected to a Picaxe 08M2 interface unit. Casi, sadly, no longer exists.</p>
-<iframe width="370" height="370"
+<div class="video-container">
+<iframe 
         src="https://www.youtube.com/embed/MnuDkM_8Cdg"
         title="Digital multimeter heat sensor"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
+</div>
       <h3>Back to Projects/Research</h3>
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
