--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -104,12 +104,12 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
 	</section>
 	<h3 id="build-it">Build it</h3>
 	<p>RIGEL is coded in game design software that beginners can code using 'drag and drop' blocks. Instead of a game, sensor inputs replace mouse and keyboard events, making the game behave as a science sensor user interface and data plotter/recorder. RIGEL is a real-world interface connecting students into a virtual game world; 2D or 3D! This open-ended design, where different game levels were different displays (e.g., a science lab sensor readout, a 3D flight simulator, or a home security system) reminded students that RIGEL was a ‘what does it measure and display today?’ machine.</p>
-</p>RIGEL uses Picaxe sensor units that can have up to 8 sensors and 8 output devices (e.g., motors, switches, lights). A USB-to-serial cable provides bi-directional high speed commuication using a simple but compact data package protocol of Michael's design. The game software simply interprets data as game control inputs.</p> 
+</p>RIGEL uses Picaxe sensor units that can have up to 8 sensors and 8 output devices (e.g., motors, switches, lights). A USB-to-serial cable provides bi-directional high speed communication using a simple but compact data package protocol of Michael's design. The game software simply interprets data as game control inputs.</p> 
 	<blockquote><span lang="en"><a href="../files/michael-fenton-microsoft-rigel-slides.pdf" target="_blank">Download the Microsoft Conference presentation [PDF]</a></span></blockquote>
-<img src="../assets/img/editor_example.png" alt="Game Maker game design software" width="400" height="400" />
+<img src="../assets/img/editor_example.png" alt="Game Maker game design software">
 <p> </p>
 <blockquote><span lang="en">"<strong>'Build it'</strong> Easily accessible game design software quickly creates a graphical user interface for a gamified science lab. Science sensor data is interpreted as keyboard or mouse input. Instead of a player, dials or data points move.</span></blockquote>
-<img src="../assets/img/michael-fenton-rigel.jpg" alt="RIGEL menu screen" width="400" height="400" />
+<img src="../assets/img/michael-fenton-rigel.jpg" alt="RIGEL menu screen" />
 <blockquote><span lang="en">"RIGEL main menu screen. Display and record sensor data in the Science Lab, or practice CPR, or play a game that requires physical activity!</span></blockquote>
 	<h3 id="test-it">Test it</h3>
 	<p>Here is where Art meets Science and Technology. Students are taught to use the game software, and consider colour use, shapes, sizes and language. Object-oriented programming is tested to make sure everything works as expected. A fun first activity is a 2D platform or maze game. What music should it have for what kind of feeling? What sound effects work best? How do you create original artwork? In what style? This built up their confidence and provided some prior knowledge before embarking on their own investigations using the more advanced RIGEL software created by Michael. A typical introductory worksheet had three stages;
@@ -128,23 +128,32 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
 <p>Learners came up with their own creative and authentic uses for a system such as RIGEL. This activity provided a low floor, high ceiling task at low cost with wide connections to many different learning areas and subjects. Learners were able to remotely monitor or activate equipment, monitor alarms and create a simple security system, monitor and record respiration and heartbeat, practice CPR, and link a player remotely to games on a computer or 3D games projected into a room.</p>
 	<h4 id="authentic-learning-at-school-and-home">Authentic cross-curricula learning at school and home</h4>
 	<p>In general the RIGEL system enabled students to sense more of the world around them. It encouraged learners to get more physically active as they experimented with bicycles, hopping, and dancing to control characters in games they created. They experienced the art, imagination and creativity that is often overlooked in traditional science activities. Students could try and fail. Failure was a learning experience. Students also used the f-word. They reported they had fun!</p>
-<iframe width="370" height="370"
-        src="https://www.youtube.com/embed/qjyM-8RGvW4"
+<div class="video-container">
+<iframe 
+        src="https://www.youtube.com/embed/mOstMwpkIpA"
         title="RIGEL 2D and 3D games link"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
+</div>
 	<h4 id="making-diy-home-made-sensors">Making low cost DIY home-made sensors</h4>
 	<p>Since the early 2000's Michael has developed a number of sensors; some are shown on his YouTube channel. Some sensors are very simple single component sensors costing a few cents. Other sensors are inexpensive but include a power source and a few more components. Apart from the straightforward voltage, current and resistance measurements, the multi-meters can also detect; visible light, infra-red light, ultra-violet light, ionising radiation such as alpha particles, temperature, angle, bend, salt, humidity, pressure, touch, paper thickness, mobile phone transmissions, static electric fields, and more.</p>
 <p>All of these sensors can be used in the RIGEL game and electronics link, to control game players or be displayed and recorded.  
+<div class="warning-box">
+  <p><strong>Warning: DO NOT let students test boiling water or live electrical outlets!</strong> </p>
+</div>
+<p>There is no need to calibrate temperature sensors using boiling water. Where in the real world would a student expect to record that temperature? For some reason teachers default to using ice and boiling water to calibrate sensors. If you are investigating cooling curves, YOU should safely get sensor readings at 100 &degC and PROVIDE THIS to learners.</p>
+<p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented many of his projects in YouTube videos. Here is the 3D flight simulator. Helping to get students physically fit while inside playing computer games!</p>
-<iframe width="370" height="370"
+<div class="video-container">
+<iframe 
         src="https://www.youtube.com/embed/uVj9vByCHW4"
         title="RIGEL 2D and 3D games link"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
+</div
       <h3>Back to Projects/Research</h3>
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
