--- a/cv.html
+++ b/cv.html
@@ -115,12 +115,14 @@
         </li>
       </ul>
 	<p>Video showcasing some of Michael's innovative teaching as it impacts on raising the quality of science education across New Zealand.</p>
-<iframe width="370" height="370"
+      <div class="video-container">
+      <iframe 
         src="https://www.youtube.com/embed/tnqhZBkrIP0"
-        title="Michael Fenton: Excellence in Leading Education - Prime Minister's Educaiton Excellence Awards"
+        title="Michael Fenton: Excellence in Leading Education - Prime Minister's Education Excellence Awards"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
-</iframe>
+      </iframe>
+      </div class>
       <h3>Teaching</h3>
       <ul class="tight">
         <li><strong>Academic & vocational</strong>:
