--- a/projects.html
+++ b/projects.html
@@ -95,6 +95,10 @@
           <h4 id="project2-title">Art Meets Science with Digital Technology: The Real-world Interactive Games and Electronics Link</h4>
           <p><a href="projects/rigel-games-electronics-link.html" aria-label="Link to RIGEL project details">Link to RIGEL project details</a></p>
         </article>
+        <article class="card" aria-labelledby="project2-title">
+          <h4 id="project2-title">Movie and TV Props to Engage STEM Learners</h4>
+          <p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Link to B9 robot project details">Link to B9 robot and other props</a></p>
+        </article>
       <p> More to be added soon...</p>
     </main>
   </div>
