--- a/teaching.html
+++ b/teaching.html
@@ -95,10 +95,10 @@
       </ul>
       <h3>Combined STEM for old and young - TV and movie props</h3>
       <figure>
-        <img src="assets/img/b9.png" alt="Prototype B9 mobile robot and science lab. AI interactive voice control." width="400" height="400"/>
+        <img src="assets/img/b9.jpg" alt="Prototype B9 mobile robot and science lab. AI interactive voice control." width="400" height="400"/>
         <figcaption>Prototype B9 mobile robot and science lab. AI voice recognition. Companion, mobile lab, and teaching tool.</figcaption>
       </figure>
-	<p><a href="files/B9test.wav" aria-label="Download Lost in Space B9 robot voice file">Download Lost in Space B9 robot voice file (WAV)</a></p>
+	<p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Link to B9 robot project details">Link to B9 robot and other props</a></p>
       <blockquote><span lang="en">“Technology should disappear into the learning experience while making thinking visible.”</span></blockquote>
       <p></p>
       <h3>Teaching - Primary to Postgraduate</h3>
