--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -84,7 +84,7 @@
       <section class="intro" aria-labelledby="intro-heading">
         <h2 id="intro-heading">Movie and TV props to engage STEM learners</h2>
 	<p>Michael Fenton is a scientist... he could not have been anything else.</p>
-	<p>Re-runs of Sci-Fi shows from the 60's and 70’s portrayed scientists as handsome heroes. They were fit, athletic, and knew how to save beautiful monsters from ravenous maidens! Science was cool, immensely exciting and called upon the cunning and creativity of its heroes to save the situation. These hereos could travel to the bottom of the sea or the far reachers of space... outdoors was where the science was! Oh, and the wonders you can do with your science knowledge;  you could build fantastic machines, like the Thunderbirds, Seaview or the Jupiter 2!</p>
+	<p>Re-runs of Sci-Fi shows from the 60's and 70’s portrayed scientists as handsome heroes. They were fit, athletic, and knew how to save beautiful monsters from ravenous maidens! Science was cool, immensely exciting and called upon the cunning and creativity of its heroes to save the situation. These hereos could travel to the bottom of the sea or the far reachers of space... outdoors was where the science was! Oh, and the wonders you can do with your science knowledge;  you could build fantastic machines, like <a href="https://www.youtube.com/watch?v=n6KUqYupp-Q" target="_blank" aria-label="Thunderirds clip">the Thunderbirds</a>, or the <a href="https://www.youtube.com/watch?v=NH08qh1rKPM" target="_blank" aria-label="Voyage to the Bottom of the Sea clip">the Seaview submarine</a>, or the <a href="https://www.youtube.com/watch?v=oXADhvEqenU" target="_blank" aria-label="Lost in Space clip">Jupiter 2</a> spaceship!</p>
 <p>Michael always thought the B9 robot was a clever way to design a multi-purpose transportable science lab. And it also made a great companion, warning of danger, monitoring the environment and playing music! He wanted one of his own.</p>
 <p>As an adult, Michael came to Secondary teaching with research and industry experience. School science equipment is limited, with expensive data loggers and sensors reserved for senior classes and limited to specialist subject use. This means that junior general science classes are unlikely to access tools that could transform their learning and view of the world. Maybe a B9 Environmental Control robot could fill the gap? Even better, explore the art and creativity overlooked in traditional science teaching.</p> 
 <img src="../assets/img/b9.jpg" alt="Lost in Space robot B9 - a mobile science laboratory, compatible with RIGEL" width="500" height="400" />
@@ -110,7 +110,7 @@
 
 <p>And now for the art involved with robotics. B9 is a functional mobile science lab - so how will I know where it is, what it's sensing and the historical trends in the environment it is monitoring?</p>
 
-<p>Answer: design a web page that is served to nearby phones, tables or laptops that looks nice, uncomplicated, and includes a logo of some kind. And here it is, with graphs, a SVG image, and a simple colour palette.</p>
+<p>Answer: Design a web page that is served to nearby phones, tables or laptops that looks nice, uncomplicated, and includes a logo of some kind. And here it is, with graphs, a SVG image, and a simple colour palette.</p>
 
 <img src="../assets/img/b9-environmental-control-robot-webserver.jpg" alt="Lost in Space robot B9 - a mobile science laboratory, compatible with RIGEL, sending data to phones, tablets or laptops." width="500" height="400" />
 
@@ -127,11 +127,13 @@
 
 <p>This is visible in the way the belly lights are made to flash. There are many ways this could have been accomplished. Changing things to get the 'right look' and functions is seen in the video clip below. This is  older version of the B9 robot voice and torso lights circuit, running on a 5V phone charger. This has been upgraded to include an offline voice recognition module. You can see a Picaxe 14M2 controls two MP3 players. This has been upgraded to using a ESP32 which also does some other things.</p>
 
-<p>The video demonstrates part of the creation process is to test where to position parts, how large they should be, and what kind of 'look and feel' they should have. For example, the 'brain' bubble in this video is too small. It cost about $20NZD for a larger acrylic fish bowl.</p> 
+<p>The video demonstrates that part of the creation process is to test where to position parts, how large they should be, and what kind of 'look and feel' they should have. For example, the 'brain' bubble in this video is too small. It cost about $20NZD for a larger acrylic fish bowl.</p> 
 
-<p>The bubble contain all the weather, navigation and communication modules, all 5V circuits. The rotating crown and finger lights / rods and other flashing lights have been tested too. There is lots of authentic maths, science, technology, but also imagination, creativity, and emotion.</p>
+<p>The bubble contains all the weather, navigation and communication modules, all 5V circuits. How should they be mounted so they don't overheat in sunlight? How does the metallic body interfere with the compass module? What gear ratio is needed to rotate the torso slowly?</p>
 
-<p?The torso sits on a Lazy Susan and rotates using a small servo. It has a separate power supply. This top section can sit in the back seat of a car and still operate. How cool is that!</p>
+<blockquote><span lang="en">Does the robot look, sound and feel right?</span></blockquote>
+
+<p>The top section can be removed from the lower legs section, and secured in the back seat of a car and STILL operate. How cool is that! Just like the Robinson robot secured at the back of their space chariot. There is lots of everyday maths and science here but also imagination, creativity, and emotion.</p>
 
 <p>Designing the voice and then recording the appropriate phrases requires all three. What kind of personality will you robot have when it responds? For comparison, listen to the B9 voice test, and compare this to the Marvin voice test. How do these compare to the ORIGINAL robot voice (done by Dick Tufield)?</p>
 
@@ -153,11 +155,11 @@
         allowfullscreen>
 </iframe>
 </div>
-<blockquote><span lang="en">"<strong>'Test it'</strong> Are the materials used strong enough? How will you test these before using them? How do they sensors work AND where will you put them so they look good AND give accurate readings? What units of measurement to you want B9 to use? How will B9 speak these to you - in a friendly, sad or neutral tone? How will you code the buttons to play Simon Says? What colours should B9 be? </span></blockquote>
+<blockquote><span lang="en">"<strong>'Test it'</strong> Are the materials used strong enough? How will you test these before using them? How do the sensors work AND where will you put them so they look good AND give accurate readings? What units of measurement to you want B9 to use? How will B9 speak these to you - in a friendly, sad or neutral tone? How will you code the front buttons to play Simon Says? What colours should B9 be? </span></blockquote>
 
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented other props from TV and movies to inspire and engage learners in inquiry-driven cross-curricula learning. Students discover that science and technology are interdependent and intertwined. Improvements in one rely on improvements in the other. This takes creativity, imagination, and an appreciation of the beauty and wonder of the way the world works.</p>
-<p>And they are lots of fun to play with!</p>
+<p>And they are lots of fun to play with! Anyone for a career at Richard Taylor's Weta Workshop?</p>
 <div class="video-container">
 <iframe 
         src="https://www.youtube.com/embed/CmX3_N7IzFQ"
