--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -91,7 +91,7 @@
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Michael uses the design and construction of movie props to engage learners in hands-on holistic maths and science lessons that stimulate creativity and imagination. This pedagogy permits cross-curricular learning at all levels and abilities.</li>
-            <li>The mobile science lab, Lost in Space robot B9, is a child-friendly build. It is not a studio accurate replica because it is intended more will be made by school students of all ages. It is supposed to be touched and played with. It is low-cost, made from recycled parts, and built from inexpensive off-the-shelf components.</li>
+            <li>The mobile science lab, Lost in Space robot B9, is a child-friendly build, NOT an expensive 'hands-off' studio accurate replica. It is intended more will be made by school students of all ages. It is supposed to be touched and played with. It is low-cost, made from recycled parts, and built from inexpensive off-the-shelf components.</li>
 	    <li>Microcontrollers used in schools, such as Picaxe, Microbit, and ESP32 are coded using the typical examples publically available for connecting sensors to any of these.</li>
 	    <li>All circuits are modular and run on 5 volts or 4.5V 3xAA battery packs. This is a safe voltage for school learners to work with at desks in science, maths, art, music or other classes.</li>
  	    <li>B9 is designed to be a fully mobile science laboratory, a companion, and a MP3 player.</li>
@@ -114,7 +114,7 @@
 
 <img src="../assets/img/b9-environmental-control-robot-webserver.jpg" alt="Lost in Space robot B9 - a mobile science laboratory, compatible with RIGEL, sending data to phones, tablets or laptops." width="500" height="400" />
 
-<p>The page is portrait, split in half, side by side in the image above. Thr robot requires a soundscape (special effects noises), lighting effects, and a personality. A personality type wil affect the speed of body movements, the humour setting, the voice tone and speed.</p>
+<p>The page is portrait, split in half, side by side in the image above. The robot requires a soundscape (special effects noises), lighting effects, and a personality. A personality type wil affect the speed of body movements, the humour setting, the voice tone and speed.</p>
 
 <p>All this is more than just coding and being an electronics technician! Even designing the circuits and placing the wiring as about "looking good" as much as being functional.</p> 
 
@@ -125,7 +125,7 @@
 	<h3 id="test-it">Test it</h3>
 	<p>Testing and modification, then re-testing is part of the learning here. Failure is a valuable learning experience. There is more than one 'right' way to solve problems, for example, designing the code or circuit for a lighting effect.</p>
 
-<p>This is visible in the way the belly lights are made to flash. There are many ways this could have been accomplished. Changing things to get the 'right look' and functions is seen in the video clip below. This is  older version of the B9 robot voice and torso lights circuit, running on a 5V phone charger. This has been upgraded to include an offline voice recognition module. You can see a Picaxe 14M2 controls two MP3 players. This has been upgraded to using a ESP32 which also does some other things.</p>
+<p>This is visible in the way the belly lights are made to flash. There are many ways this could have been accomplished. Changing things to get the 'right look' and functions is seen in the video clip below. This older version of the B9 robot voice and torso lights circuit runs on a 5V phone charger. This has been upgraded to include an offline AI voice recognition module. You can see a Picaxe 14M2 controls two MP3 players. This has been upgraded to using a ESP32 which also does some other things.</p>
 
 <p>The video demonstrates that part of the creation process is to test where to position parts, how large they should be, and what kind of 'look and feel' they should have. For example, the 'brain' bubble in this video is too small. It cost about $20NZD for a larger acrylic fish bowl.</p> 
 
@@ -135,7 +135,7 @@
 
 <p>The top section can be removed from the lower legs section, and secured in the back seat of a car and STILL operate. How cool is that! Just like the Robinson robot secured at the back of their space chariot. There is lots of everyday maths and science here but also imagination, creativity, and emotion.</p>
 
-<p>Designing the voice and then recording the appropriate phrases requires all three. What kind of personality will you robot have when it responds? For comparison, listen to the B9 voice test, and compare this to the Marvin voice test. How do these compare to the ORIGINAL robot voice (done by Dick Tufield)?</p>
+<p>Designing the voice and then recording the appropriate phrases requires all three. What kind of personality will your own robot have when it responds? For comparison, listen to the B9 voice test, and compare this to the Marvin voice test. How do these compare to the ORIGINAL robot voice (done by Dick Tufield)?</p>
 
 <blockquote><p><a href="../files/B9-voice-test.mp3" aria-label="Download B9 robot voice file">Download B9 robot personality voice file (MP3)</a></p>
 <p><a href="../files/marvin_voice_test.mp3" aria-label="Download Marvin robot voice file">Download Marvin personality voice file (MP3)</a></p></blockquote>
