--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -45,9 +45,9 @@
       <span class="brand__logo" aria-hidden="true">MF</span>
       <a class="brand__name" href="../index.html" aria-label="Home page of Michael Fenton">Michael Fenton</a>
     </div>
-    <button class="nav-toggle" aria-expanded="false" aria-controls="mainnav" aria-label="Toggle navigation menu">
+    <button class="nav-toggle" aria-expanded="false" aria-controls="mainnav" aria-label="Navigation menu">
       <span class="nav-toggle__bar" aria-hidden="true"></span>
-      <span class="sr-only">Toggle navigation</span>
+      <span class="sr-only">Navigation</span>
     </button>
     <nav id="mainnav" class="mainnav" role="navigation" aria-label="Main menu">
       <ul>
