--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -80,6 +80,7 @@
         </ul>
       </div>
     </aside>
+  </div>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
         <h2 id="intro-heading">Art meets Science with Digital Technology</h2>
@@ -104,7 +105,7 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
 	</section>
 	<h3 id="build-it">Build it</h3>
 	<p>RIGEL is coded in game design software that beginners can code using 'drag and drop' blocks. Instead of a game, sensor inputs replace mouse and keyboard events, making the game behave as a science sensor user interface and data plotter/recorder. RIGEL is a real-world interface connecting students into a virtual game world; 2D or 3D! This open-ended design, where different game levels were different displays (e.g., a science lab sensor readout, a 3D flight simulator, or a home security system) reminded students that RIGEL was a ‘what does it measure and display today?’ machine.</p>
-</p>RIGEL uses Picaxe sensor units that can have up to 8 sensors and 8 output devices (e.g., motors, switches, lights). A USB-to-serial cable provides bi-directional high speed communication using a simple but compact data package protocol of Michael's design. The game software simply interprets data as game control inputs.</p> 
+<p>RIGEL uses Picaxe sensor units that can have up to 8 sensors and 8 output devices (e.g., motors, switches, lights). A USB-to-serial cable provides bi-directional high speed communication using a simple but compact data package protocol of Michael's design. The game software simply interprets data as game control inputs.</p> 
 	<blockquote><span lang="en"><a href="../files/michael-fenton-microsoft-rigel-slides.pdf" target="_blank">Download the Microsoft Conference presentation [PDF]</a></span></blockquote>
 <img src="../assets/img/editor_example.png" alt="Game Maker game design software">
 <p> </p>
@@ -153,11 +154,10 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
-</div
+</div>
       <h3>Back to Projects/Research</h3>
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
-  </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
   <script src="../assets/js/main.js"></script>
 </body>
