--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -175,8 +175,8 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
-</div
-<p></p>
+</div>
+<br>
 <div class="video-container">
 <iframe 
         src="https://www.youtube.com/embed/kSPDjAhl1Qc?rel=0"
