--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <p class="meta">Updated for B9 robot and RIGEL &middot; 2025</p>
           <blockquote><span lang="en">“Small, reliable tools can shift student focus from book rote learning to hands-on inquiry.”</span></blockquote>
           <p>Project-based learning to scaffold science, maths, and data literacy.</p>
-          <p><a href="files/michael-fenton-using-digital-multimeters.pdf "target="_blank" aria-label="Download conferance workshop as PDF file">Download using digital multimeters in science and maths workshop (PDF)</a></p>
+	  <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Go to teaching resources page.">Go to teaching resources page.</a></p>
         </article>
       </section>
       <section aria-labelledby="sample-publications-heading">
