--- a/index.html
+++ b/index.html
@@ -101,12 +101,16 @@
 	as well as the academically inclined learners to make authentic
 	discoveries as citizen scientists. Findings were presented at scientific
 	conferences, provided to the Ministry of Education, and published on the Nexus
-	Research Group website.</p>
+	Research Group website. The website received 5,000 uniqure visitors per month.
+	<p>School students of all ages and abilities regularly won Science Fair awards and prizes,
+	validating Michael's approach of 'teach to interests and abilities, NOT age group'.</p>
 	<h3 id="education-research-and-innovation">Education research and innovation</h3>
 	<p>Do-It-Yourself amateur home-made lab equipment was invented and
 	trialed by Michael to encourage authentic hands-on learning in Science
-	and Mathematics classes. Michael pioneered the wider use of digital
-	multimeters (DMM) as inexpensive science data loggers in Primary
+	and Mathematics classes but also open opportunities for cross-curricula learning. 
+	This was part of his 'teach to interests and abilities, NOT age group' philosophy, a response 
+	to seeing teachers in schools telling younger learners 'wait until you are older' to use science equipment. 
+	Michael pioneered the wider use of digital multimeters (DMM) as inexpensive science data loggers in Primary
 	classrooms and cross-curricula Secondary school Science and Maths lessons. A variety
 	of home-made sensors are possible, many cost just a few cents, able to detect a wide
 	range of environmental factors. Michael's innovation is still being shared, inspiring
@@ -142,7 +146,8 @@
 <blockquote><span lang="en">"Michael has a wealth of diverse experience in education, and his focus is lately on assisting teachers to make science and maths learning practical, fun, and hands-on. He uses active learning (project-based learning) to engage in authentic tasks, using a variety of technologies, some of which he has invented himself." - SciCon Science Teachers conference</span></blockquote>
 
 <blockquote><span lang="en">"Michael’s lecture was titled 'Putting the science back into science education – reclaiming the maker space'. He talks about current realities for most science teachers: the equilibrium they need to find between authentic learning, teaching for assessment, and staying abreast of the evolving impact that digital technology continues to have on education."</span></blockquote>
-
+	<h3 id="research-active">Research active</h3>
+	<p>Michael stays research active, following the latest news in AI, quantum computing, science generally, and education research. He presented an analysis of the state of the New Zealand Science curriculum and Digital Technology curriculum. His findings highlighted that curriculum reviews should happen at shorter intervals, and that much of the coding and electronics taught nationally still dates back to technology from the late 1990's. Omitting quantum computing and analogue circuits appears to be short-sighted and fails to ensure a future-focused curriulum.</p>
       </section>
       <section aria-labelledby="featured-projects-heading">
         <h3 id="featured-projects-heading">Featured Projects</h3>
