--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <blockquote><span lang="en">"Michael’s lecture was titled 'Putting the science back into science education – reclaiming the maker space'. He talks about current realities for most science teachers: the equilibrium they need to find between authentic learning, teaching for assessment, and staying abreast of the evolving impact that digital technology continues to have on education."</span></blockquote>
 	<h3 id="research-active">Research active</h3>
-	<p>Michael stays research active, following the latest news in AI, quantum computing, science generally, and education research. He presented an analysis of the state of the New Zealand Science curriculum and Digital Technology curriculum. His findings highlighted that curriculum reviews should happen at shorter intervals, and that much of the coding and electronics taught nationally still dates back to technology from the late 1990's. Omitting quantum computing and analogue circuits appears to be short-sighted and fails to ensure a future-focused curriulum.</p>
+	<p>Michael stays research active, following the latest news in AI, quantum computing, science generally, and education research. He presented an analysis of the state of the New Zealand Science curriculum and Digital Technology curriculum. His findings highlighted that curriculum reviews should happen at shorter intervals, and that much of the coding and electronics taught nationally still dates back to technology from the late 1990's. Omitting quantum computing and analogue circuits appears to be short-sighted and fails to ensure a future-focused curriculum.</p>
       </section>
       <section aria-labelledby="featured-projects-heading">
         <h3 id="featured-projects-heading">Featured Projects</h3>
